# telegram-quizbot

./: README.md  config.toml  main.py  pyproject.toml  question_validator.py  quiz.toml
